app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  position: relative;
}

body {
  color: black;
  background: white;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.modal {
  /* display: flex; */
  justify-content: center;
  align-items: center;
  background: #31494272;
  position: fixed;
  overflow: hidden;
  width: 100vw;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}
.modal-content {
  position: absolute;
  top: 50%;
  left: 50%;
  width: fit-content;
  min-width: 30%;
  min-height: 30%;
  display: flex;
  flex-direction: column;
  transform: translate(-50%, -50%);
  background-color: #6107754f;
  backdrop-filter: blur(10px);
  padding: 5px;
  border-radius: 5px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
}
.filter-blur {
  background: #16abff33;
  transition: backdrop-filter 700ms;
  /* animation-duration: 700ms; */
}
.filter-blur:hover {
  transition: backdrop-filter 700ms;
  backdrop-filter: blur(10px);
}

.scale:hover {
  transition: scale 0.5s;
  scale: 1.3;
}
.close {
  all: "unset";
  display: "flex";
  position: "absolute";
  cursor: "pointer";
  top: -22;
  right: -22;
  padding: "5px 5px";
  background: "rgba(0;0;0;0.2)";
  border-radius: "5rem";
  border-bottom-left-radius: "0";
  z-index: 100;
  font-size: "20px";
}
.portion-circle {
  display: flex;
  flex-wrap: wrap;
  gap: 2.6em;
  filter: drop-shadow(2px 2px 0px rgba(0, 5, 9, 0.559));
}
.portion {
  width: 150px;
  height: 150px;
  background-color: #c2e74b;
  /* border-radius: 50%; */
  /* border: 1px solid rgba(80, 189, 149, 0.241); */
  position: relative;
  display: flex;
  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
  justify-content: center;
  /* padding-top: 3rem; */
  align-items: center;
  filter: drop-shadow(2px 2px 5px rgb(var(--background-end-rgb)));
  /* box-shadow: 2px 2px 10px rgb(var(--background-end-rgb)); */
}

.content-skill {
  color: rgb(106, 12, 213);
  position: relative;
  width: 20px;
  height: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 10px;
  font-weight: bold;
}
.content-skill::after {
  position: absolute;
  top: -65px;
  left: -65px;
  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
  bottom: -65px;
  right: -65px;
  content: "";
  /* border: 1px solid rgba(80, 189, 149, 0.241); */
  width: 150px;
  height: 150px;
  /* border-radius: 50%; */
  z-index: -10;
  background: #d448f037;
  /* padding-bottom: 2rem; */
  /* backdrop-filter: blur(10px); */
}
.content-skill > strong {
  font-size: 0.9rem;
  text-transform: uppercase;
  color: rgb(228, 230, 231);
  letter-spacing: 0.2em;
  margin-bottom: 30px;
  transition: all 300ms ease-in-out 2s;
}
.content-skill > span:nth-child(1) {
  font-size: 3rem;
  margin-bottom: 10px;
  color: rgb(100, 168, 228);
  filter: drop-shadow(2px 2px 0px rgba(0, 5, 9, 0.559));
}
.status {
  font-size: 13px;
  padding: 2px;
  filter: drop-shadow(5px 5px 10px rgb(var(--background-end-rgb)));
  background-color: #ee725cbf;
  color: rgba(253, 253, 253, 0.935);
  letter-spacing: 2px;
  /* border-radius: 10px; */
  /* rotate: -20deg; */
  /* transform: translate(30px, -120px); */
  box-shadow: 2px 2px 2px #1400001f;
  clip-path: polygon(
    0% 0%,
    10% 50%,
    0% 100%,
    100% 100%,
    90% 50%,
    100% 0%,
    0% 0%
  );
}
/* SlideInComponent.css */
.slide-in {
  /* opacity: 0; */
  text-align: center;
  /* transform: translateX(10%); */
  transition: transform 0.5s, opacity 0.5s;
  animation: slide-in 1s ease-in-out 1s;
}

@keyframes slide-in {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0);
  }
}
.slide-in.visible {
  opacity: 1;
  transform: translateX(0);
}

.gap {
  height: 20rem;
}
.statusSkill {
  display: inline-flex;
  gap: 40px;
  transition: transform 1s ease-in-out;
}
.viewMessage {
  background: rgb(47, 141, 153);
  padding: 4rem;
  height: 100vh;
  overflow: hidden;
}
.layoutMessage {
  display: flex;
  gap: 2rem;
  flex-direction: column;
  /* padding: 4rem; */
  /* margin-top: 4rem; */
  align-items: center;
  height: 90vh;
  justify-content: start;
  overflow: scroll;
  /* padding-top: 12rem; */
}
.messageBox {
  background: #0095ff70;
  width: 50%;
  border-radius: 2rem;
  border-top-left-radius: 0;
  display: flex;
  flex-direction: column;
  padding: 1rem;
  box-shadow: 02px 5px 4px rgba(0, 0, 0, 0.5);
}
.messageBox > .name {
  text-transform: capitalize;
  font-size: x-large;
  font-weight: bold;
  padding: 2px;
  color: blanchedalmond;
  backdrop-filter: blur(10px);
  letter-spacing: 0.51cap;
  position: relative;
  border-bottom: 1px solid #01050933;
  margin-bottom: 0.31rem;
  text-shadow: 5px 3px 3px rgba(11, 1, 1, 0.5);
}
.messageBox > .email > span {
  /* background: rgb(106, 12, 213); */
  padding: 2px;
  color: rgb(63, 74, 74);
  margin-right: 0.41rem;
  text-decoration: none;
}
.messageBox > .email {
  font-size: large;
  font-style: italic;
  color: #403531cc;
  /* text-decoration: underline; */
}
.messageBox > .message {
  font-size: large;
  /* text-indent: 20px;  */
  text-align: justify;
  padding: 1rem;
}
.messageBox > .time {
  font-size: small;
  color: #3f4222bb;
  /* text-indent: 20px;  */
  text-align: end;
  padding-right: 2rem;
}

